--- a/juego_v3/index.html
+++ b/juego_v3/index.html
@@ -68,7 +68,7 @@
 			</div>
 
 
-	<!--ste es mi reproductor	de musica><EMBED SRC="musica/007 agente secreto.mp3" AUTOSTART=true LOOP=true VOLUME="80" WIDTH="0" HEIGHT="0"><br-->
+	<!--ste es mi reproductor	de musica--><EMBED SRC="musica/007 agente secreto.mp3" AUTOSTART=true LOOP=true VOLUME="80" WIDTH="0" HEIGHT="0"><br>
 
 				
 			
